--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Happy Valentine Day</string>
     <string name="recipient">Dear Anetta</string>
     <string name="sender">From Ihor</string>
+    <string name="congratulation_text">Your_Example</string>
 </resources>
